# quickerDSDA

./: .gitmodules  README.md  meson.build  meson_options.txt
.github/workflows/: make.yml
source/: emuInstanceBase.hpp  inputParser.hpp  lmpConverter.cpp  parallel.cpp  playbackInstance.hpp  player.cpp  tester.cpp  transfer.cpp
source/base/: config.h  emuInstance.hpp  i_main.c  meson.build
source/new/: emuInstance.hpp  meson.build
source/new/core/: am_map.c  d_client.c  d_deh.c  d_event.h  d_items.c  d_items.h  d_main.c  d_main.h  d_player.h  doomdef.c  doomdef.h  doomstat.c  doomstat.h  doomtype.h  dsda.c  dsda.h  e6y.c  e6y.h  f_finale.c  f_wipe.c  g_game.c  g_game.h  g_overflow.c  g_overflow.h  hu_lib.c  hu_stuff.c  i_capture.c  i_capture.h  i_sound.h  i_system.c  i_system.h  i_video.h  info.c  info.h  lprintf.c  m_cheat.c  m_menu.c  m_misc.c  m_random.c  m_random.h  (+64 more)
source/new/core/SDL/: i_main.c
source/new/core/dsda/: aim.c  analysis.c  args.c  build.c  compatibility.c  configuration.c  console.c  console.h  cr_table.c  data_organizer.c  death.c  demo.c  endoom.c  episode.c  episode.h  excmd.c  exhud.c  features.c  font.c  game_controller.c  ghost.c  global.c  global.h  id_list.c  input.c  key_frame.c  map_format.c  map_format.h  mapinfo.c  mapinfo.h  memory.c  mobjinfo.c  mouse.c  music.c  options.c  pause.c  pclass.c  pclass.h  preferences.c  save.c  (+17 more)
source/new/core/dsda/hud_components/: base.c  base.h  command_display.c  free_text.c  minimap.c
source/new/core/dsda/mapinfo/: doom.c  hexen.c  legacy.c  u.c
source/new/core/dsda/mapinfo/doom/: parser.cpp  parser.h
source/new/core/heretic/: f_finale.c  in_lude.c  sb_bar.c
source/new/core/hexen/: a_action.c  f_finale.c  h2_main.c  in_lude.c  p_acs.c  p_anim.c  p_things.c  po_man.c  sn_sonix.c
tests/: .gitignore  README.txt  convertDemos.sh  doom1.e1.uvmax.lmp  doom1.e1.uvmax.sol  doom1.e1.uvmax.test  doom1.e1m1.reduced.lmp  doom1.e1m1.reduced.sol  doom1.e1m1.reduced.test  doom1.e2.uvmax.lmp  doom1.e2.uvmax.sol  doom1.e2.uvmax.test  doom1.e3.uvmax.lmp  doom1.e3.uvmax.sol  doom1.e3.uvmax.test  doom1.e4.uvmax.lmp  doom1.e4.uvmax.sol  doom1.e4.uvmax.test  doom2.full.lmp  doom2.full.sol  doom2.full.test  doom2.full.uvmax.lmp  doom2.full.uvmax.sol  doom2.full.uvmax.test  doom2.m01.4players.lmp  doom2.m01.4players.sol  doom2.m01.4players.test  doom2.m01.uvspeed.lmp  doom2.m01.uvspeed.sol  doom2.m01.uvspeed.test  doom2.m15.uvspeed.lmp  doom2.m15.uvspeed.sol  doom2.m15.uvspeed.test  doom2.m21.uvspeed.lmp  doom2.m21.uvspeed.sol  doom2.m21.uvspeed.test  doom2.m30.uvspeed.lmp  doom2.m30.uvspeed.sol  doom2.m30.uvspeed.test  doom2.map01.sol  (+96 more)
tests/wads/: freedoom011.reduced.e1m1.wad
