# quickerDSDA Core sources

quickerDSDASrc =  [
 'core/doomdef.c',
 'core/doomstat.c',
 'core/dsda.c',
 'core/dsda/aim.c',
 'core/dsda/analysis.c',
 'core/dsda/args.c',
 'core/dsda/compatibility.c',
 'core/dsda/configuration.c',
 'core/dsda/cr_table.c',
 'core/dsda/data_organizer.c',
 'core/dsda/death.c',
 'core/dsda/demo.c',
 'core/dsda/destructible.c',
 'core/dsda/endoom.c',
 'core/dsda/episode.c',
 'core/dsda/excmd.c',
 'core/dsda/exdemo.c',
 'core/dsda/features.c',
 'core/dsda/font.c',
 'core/dsda/game_controller.c',
 'core/dsda/ghost.c',
 'core/dsda/global.c',
 'core/dsda/id_list.c',
 'core/dsda/input.c',
 'core/dsda/key_frame.c',
 'core/dsda/map_format.c',
 'core/dsda/mapinfo.c',
 'core/dsda/mapinfo/doom.c',
 'core/dsda/mapinfo/doom/parser.cpp',
 'core/dsda/mapinfo/hexen.c',
 'core/dsda/mapinfo/legacy.c',
 'core/dsda/mapinfo/u.c',
 'core/dsda/memory.c',
 'core/dsda/messenger.c',
 'core/dsda/mobjinfo.c',
 'core/dsda/mouse.c',
 'core/dsda/msecnode.c',
 'core/dsda/music.c',
 'core/dsda/name.c',
 'core/dsda/options.c',
 'core/dsda/palette.c',
 'core/dsda/pause.c',
 'core/dsda/pclass.c',
 'core/dsda/playback.c',
 'core/dsda/preferences.c',
 'core/dsda/quake.c',
 'core/dsda/render_stats.c',
 'core/dsda/save.c',
 'core/dsda/scroll.c',
 'core/dsda/settings.c',
 'core/dsda/sfx.c',
 'core/dsda/skill_info.c',
 'core/dsda/skip.c',
 'core/dsda/sndinfo.c',
 'core/dsda/spawn_number.c',
 'core/dsda/split_tracker.c',
 'core/dsda/sprite.c',
 'core/dsda/state.c',
 'core/dsda/stretch.c',
 'core/dsda/text_color.c',
 'core/dsda/text_file.c',
 'core/dsda/thing_id.c',
 'core/dsda/time.c',
 'core/dsda/tracker.c',
 'core/dsda/tranmap.c',
 'core/dsda/udmf.cpp',
 'core/dsda/utility.c',
 'core/dsda/utility/string_view.c',
 'core/dsda/wad_stats.c',
 'core/d_items.c',
 'core/d_main.c',
 'core/e6y.c',
 'core/f_finale.c',
 'core/f_wipe.c',
 'core/g_game.c',
 'core/g_overflow.c',
 'core/heretic/d_main.c',
 'core/heretic/f_finale.c',
 'core/heretic/info.c',
 'core/heretic/in_lude.c',
 'core/heretic/level_names.c',
 'core/heretic/sb_bar.c',
 'core/heretic/sounds.c',
 'core/hexen/a_action.c',
 'core/hexen/info.c',
 'core/hexen/f_finale.c',
 'core/hexen/h2_main.c',
 'core/hexen/in_lude.c',
 'core/hexen/p_acs.c',
 'core/hexen/p_anim.c',
 'core/hexen/p_things.c',
 'core/hexen/po_man.c',
 'core/hexen/sn_sonix.c',
 'core/hexen/sounds.c',
 'core/hexen/sv_save.c',
 'core/hu_lib.c',
 'core/hu_stuff.c',
 'core/info.c',
 'core/i_capture.c',
 'core/i_glob.c',
 'core/lprintf.c',
 'core/md5.c',
 'core/m_argv.c',
 'core/m_bbox.c',
 'core/m_file.c',
 'core/m_misc.c',
 'core/m_random.c',
 'core/p_ceilng.c',
 'core/p_doors.c',
 'core/p_enemy.c',
 'core/p_floor.c',
 'core/p_genlin.c',
 'core/p_inter.c',
 'core/p_lights.c',
 'core/p_map.c',
 'core/p_maputl.c',
 'core/p_mobj.c',
 'core/p_plats.c',
 'core/p_pspr.c',
 'core/p_saveg.c',
 'core/p_setup.c',
 'core/p_sight.c',
 'core/p_spec.c',
 'core/p_switch.c',
 'core/p_telept.c',
 'core/p_tick.c',
 'core/p_user.c',
 'core/r_bsp.c',
 'core/r_data.c',
 'core/r_draw.c',
 'core/r_fps.c',
 'core/r_main.c',
 'core/r_patch.c',
 'core/r_plane.c',
 'core/r_segs.c',
 'core/r_sky.c',
 'core/r_things.c',
 'core/scanner.cpp',
 'core/sc_man.c',
 'core/smooth.c',
 'core/sounds.c',
 'core/st_lib.c',
 'core/st_stuff.c',
 'core/tables.c',
 'core/umapinfo.cpp',
 'core/v_video.c',
 'core/wadtbl.c',
 'core/wi_stuff.c',
 'core/w_wad.c',
 'core/z_bmalloc.c',
 'core/z_zone.c',
 'core/d_client.c',
 'core/w_mmap.c',
 'core/i_system.c',
]

quickerDSDAIncludeDirs = [
  '.',
  '..',
		'core/'
]

quickerDSDACompileArgs = [
	'-Wfatal-errors',
	'-DHAVE_CONFIG_H',
	'-Dstricmp=strcasecmp',
	'-Dstrnicmp=strncasecmp',
	'-DNDEBUG',
	'-ffast-math',
	'-Wno-unused-function',
	'-Wno-switch',
	'-Wno-pointer-sign',
	'-Wno-sign-compare',
	'-Wno-stringop-overflow',
	'-Wno-format-truncation',
	'-Wno-unused-but-set-variable',
	'-Wno-unused-variable'

]

# DSDA dependency

 quickerDSDADependency = declare_dependency(
  compile_args        : [  quickerDSDACompileArgs ],
	link_args        : [  ],
  include_directories : include_directories(quickerDSDAIncludeDirs),
  sources             : [ quickerDSDASrc ],
  dependencies        : [  ]
 )

# QuickerDSDA Core Configuration

 newDependency = declare_dependency(
  compile_args        : [ ],
  include_directories : [ include_directories( ['.', '..'] )],
  sources             : [ ],
  dependencies        : [ 
			                       quickerDSDADependency,
                        ]
 )
