# quickerDSDA Core sources

quickerDSDASrc =  [
 'core/doomdef.c',
 'core/doomstat.c',
 'core/dsda.c',
 'core/dsda/aim.c',
 'core/dsda/args.c',
 'core/dsda/compatibility.c',
 'core/dsda/configuration.c',
 'core/dsda/cr_table.c',
 'core/dsda/data_organizer.c',
 'core/dsda/death.c',
 'core/dsda/endoom.c',
 'core/dsda/episode.c',
 'core/dsda/excmd.c',
 'core/dsda/features.c',
 'core/dsda/game_controller.c',
 'core/dsda/global.c',
 'core/dsda/id_list.c',
 'core/dsda/input.c',
 'core/dsda/map_format.c',
 'core/dsda/mapinfo.c',
 'core/dsda/mapinfo/doom.c',
 'core/dsda/mapinfo/doom/parser.cpp',
 'core/dsda/mapinfo/legacy.c',
 'core/dsda/mobjinfo.c',
 'core/dsda/mouse.c',
 'core/dsda/msecnode.c',
 'core/dsda/name.c',
 'core/dsda/options.c',
 'core/dsda/palette.c',
 'core/dsda/pause.c',
 'core/dsda/pclass.c',
 'core/dsda/preferences.c',
 'core/dsda/save.c',
 'core/dsda/scroll.c',
 'core/dsda/settings.c',
 'core/dsda/skill_info.c',
 'core/dsda/sndinfo.c',
 'core/dsda/spawn_number.c',
 'core/dsda/sprite.c',
 'core/dsda/state.c',
 'core/dsda/stretch.c',
 'core/dsda/thing_id.c',
 'core/dsda/tranmap.c',
 'core/dsda/utility.c',
 'core/dsda/utility/string_view.c',
 'core/dsda/wad_stats.c',
 'core/d_items.c',
 'core/d_main.c',
 'core/e6y.c',
 'core/f_finale.c',
 'core/f_wipe.c',
 'core/g_game.c',
 'core/g_overflow.c',
 'core/info.c',
 'core/i_capture.c',
 'core/i_glob.c',
 'core/lprintf.c',
 'core/m_argv.c',
 'core/m_bbox.c',
 'core/m_file.c',
 'core/m_misc.c',
 'core/m_random.c',
 'core/p_ceilng.c',
 'core/p_doors.c',
 'core/p_enemy.c',
 'core/p_floor.c',
 'core/p_genlin.c',
 'core/p_inter.c',
 'core/p_lights.c',
 'core/p_map.c',
 'core/p_maputl.c',
 'core/p_mobj.c',
 'core/p_plats.c',
 'core/p_pspr.c',
 'core/p_saveg.c',
 'core/p_setup.c',
 'core/p_sight.c',
 'core/p_spec.c',
 'core/p_switch.c',
 'core/p_telept.c',
 'core/p_tick.c',
 'core/p_user.c',
 'core/r_data.c',
 'core/r_main.c',
 'core/scanner.cpp',
 'core/sc_man.c',
 'core/sounds.c',
 'core/st_lib.c',
 'core/tables.c',
 'core/umapinfo.cpp',
 'core/v_video.c',
 'core/wadtbl.c',
 'core/wi_stuff.c',
 'core/w_wad.c',
 'core/z_bmalloc.c',
 'core/z_zone.c',
 'core/d_client.c',
 'core/w_mmap.c',
 'core/i_system.c',
]

quickerDSDAIncludeDirs = [
  '.',
  '..',
		'core/'
]

quickerDSDACompileArgs = [
	'-Wfatal-errors',
	'-DHAVE_CONFIG_H',
	'-Dstricmp=strcasecmp',
	'-Dstrnicmp=strncasecmp',
	'-DNDEBUG',
	'-ffast-math',
	'-Wno-unused-function',
	'-Wno-switch',
	'-Wno-pointer-sign',
	'-Wno-sign-compare',
	'-Wno-stringop-overflow',
	'-Wno-format-truncation',
	'-Wno-unused-but-set-variable',
	'-Wno-unused-variable'

]

# DSDA dependency

 quickerDSDADependency = declare_dependency(
  compile_args        : [  quickerDSDACompileArgs ],
	link_args        : [  ],
  include_directories : include_directories(quickerDSDAIncludeDirs),
  sources             : [ quickerDSDASrc ],
  dependencies        : [  ]
 )

# QuickerDSDA Core Configuration

 newDependency = declare_dependency(
  compile_args        : [ ],
  include_directories : [ include_directories( ['.', '..'] )],
  sources             : [ ],
  dependencies        : [ 
			                       quickerDSDADependency,
                        ]
 )
